Closed
Bug 566216
Opened 15 years ago
Closed 15 years ago
"ASSERTION: Not an element?" with svg:animate, dom range
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a5
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ASSERTION: Not an element?: 'IsElement()', file ../../dist/include/mozilla/dom/Element.h, line 60
| Reporter | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Comment 2•15 years ago
|
||
Oops. Parent could be a document fragment here (and is in that testcase).
Blocks: 565826
| Assignee | ||
Comment 3•15 years ago
|
||
Oops. Parent could be a document fragment here (and is in that testcase).
Updated•15 years ago
|
Attachment #445719 -
Flags: review?(dholbert) → review+
| Assignee | ||
Comment 4•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in
before you can comment on or make changes to this bug.
Description
•