Bug 566216.  Our parent could be a document fragment.  r=dholbert